# jevois

./: .gitignore  CMakeLists.txt  COPYING  ICM20948_dmp3a.H  INSTALL  README  README.md  copyright-c  copyright-perl  rebuild-host.sh  rebuild-platform.sh  rebuild-pro-host.sh  rebuild-pro-platform-pdeb.sh  rebuild-pro-platform.sh
CMakeModules/: JeVois.cmake  JeVoisA33.cmake  JeVoisHardware.cmake  JeVoisPro.cmake  README.md
CMakeModules/debian/: postinst  prerm
Config/: demodata-Pro.yml  initscript-A33.cfg  initscript-Pro.cfg  initscript.cfg  params.cfg  videomappings-A33.cfg  videomappings-Pro.cfg  videomappings.cfg
Contrib/: check.sh  clip.cpp.patch  reinstall.sh  tensorflow.patch  update-patches.sh
Contrib/ImGuiColorTextEdit/: TextEditor.cpp  TextEditor.h
Contrib/imgui/: imconfig.h
Contrib/imgui-filebrowser/: imfilebrowser.h
Contrib/imgui/backends/: imgui_impl_opengl3.cpp
doc/: ArduinoTutorial.dox  Case-Mounting.dox  Change110log.dox  Change111log.dox  Change112log.dox  Change113log.dox  Change114log.dox  Change115log.dox  Change117log.dox  Change118log.dox  Change119log.dox  Change11log.dox  Change120log.dox  Change121log.dox  Change122log.dox  Change123log.dox  Change12log.dox  Change13log.dox  Change14log.dox  Change15log.dox  Change16log.dox  Change17log.dox  Change18log.dox  Change19.dox  Change19log.dox  Changelog11.dox  CompilingJeVois.dox  CompilingJeVoisBase.dox  Concepts.dox  Debugging.dox  DocumentationRules.dox  DoxygenLayout.xml  Fanless.dox  FlashingToSD.dox  Handling.dox  Hardware.dox  HardwareFiles.dox  History.dox  JeVoisBaseDocs.dox  JeVoisDaemon.dox  (+72 more)
doc/snip/: PythonTutorial1.py  PythonTutorial2.py  PythonTutorial3.py  tutorial1.C  tutorial2.C  tutorial3.C  tutorial4.C
include/: CMakeLists.txt
include/jevois/Component/: Component.H  Manager.H  Parameter.H  ParameterDef.H  ParameterRegistry.H  ParameterStringConversion.H  ValidValuesSpec.H
include/jevois/Component/details/: ComponentImpl.H  ManagerImpl.H  ParameterDefImpl.H  ParameterHelpers.H  ParameterImpl.H  ParameterStringConversionImpl.H  ValidValuesSpecImpl.H
include/jevois/Config/: Config.H.in
include/jevois/Core/: Camera.H  CameraCalibration.H  CameraDevice.H  CameraSensor.H  DynamicLoader.H  Engine.H  Gadget.H  ICM20948.H  ICM20948_regs.H  IMU.H  IMUdata.H  IMUi2c.H  IMUspi.H  InputFrame.H  Module.H  MovieInput.H  MovieOutput.H  OutputFrame.H  PythonModule.H  PythonOpenCV.H  PythonParameter.H  PythonSupport.H  PythonWrapper.H  Serial.H  StdioInterface.H  UserInterface.H  VideoBuf.H  VideoBuffers.H  VideoDisplay.H  VideoDisplayGL.H  VideoDisplayGUI.H  VideoInput.H  VideoMapping.H  VideoOutput.H  VideoOutputNone.H  uvc.h
include/jevois/Core/details/: DynamicLoaderImpl.H  PythonParameterImpl.H  PythonSupportImpl.H
include/jevois/DNN/: CLIP.H  Network.H  NetworkHailo.H  NetworkNPU.H  NetworkONNX.H  NetworkOpenCV.H  NetworkPython.H  NetworkTPU.H  Pipeline.H  PostProcessNPUhelpers.H  PostProcessor.H  PostProcessorClassify.H  PostProcessorDetect.H  PostProcessorDetectOBB.H  PostProcessorDetectYOLO.H  PostProcessorPose.H  PostProcessorPython.H  PostProcessorSegment.H  PostProcessorStub.H  PostProcessorYuNet.H  PreProcessor.H  PreProcessorBlob.H  PreProcessorPython.H  Utils.H  YOLOjevois.H
include/jevois/DNN/details/: UtilsImpl.H
include/jevois/DNN/hailo/: common.h  double_buffer.hpp  yolov8pose_postprocess.hpp
include/jevois/DNN/hailo/common/: hailo_common.hpp  hailo_objects.hpp  hailo_tensors.hpp  math.hpp  tensors.hpp
include/jevois/DNN/hailo/common/labels/: coco_eighty.hpp
include/jevois/Debug/: Log.H  Profiler.H  PythonException.H  SysInfo.H  Timer.H  Watchdog.H
include/jevois/GPU/: ChatBox.H  GPUimage.H  GPUprogram.H  GPUshader.H  GPUtexture.H  GPUtextureDmaBuf.H  GUIconsole.H  GUIeditor.H  GUIhelper.H  GUIserial.H  ImGuiBackend.H  ImGuiBackendMALI.H  ImGuiBackendSDL.H  ImGuiImage.H  OpenGL.H  VideoDisplayBackend.H  VideoDisplayBackendMALI.H  VideoDisplayBackendX11.H
include/jevois/GPU/details/: GUIhelperImpl.H
include/jevois/Image/: ColorConversion.h  Jpeg.H  RawImage.H  RawImageOps.H
include/jevois/Image/details/: RawImageImpl.H
include/jevois/Types/: BlockingBehavior.H  BoundedBuffer.H  Enum.H  ObjDetect.H  ObjReco.H  PoseSkeleton.H  Range.H  Semaphore.H  Singleton.H  StepRange.H
include/jevois/Types/details/: BoundedBufferImpl.H  EnumImpl.H  RangeImpl.H  SemaphoreImpl.H  SingletonImpl.H  StepRangeImpl.H
include/jevois/Util/: Async.H  CompilerUtil.H  Console.H  Coordinates.H  Demangle.H  ThreadPool.H  Utils.H
include/jevois/Util/details/: AsyncImpl.H  DemangleImpl.H  ThreadPoolImpl.H  UtilsImpl.H
pkgconfig/: jevois.pc.in
scripts/: astylerc  collate-benchmarks.pl  compute-dependencies.pl  docinstall.sh  extract-code-snippets.pl  glsl-to-cpp.sh  jevois-cleanup.sh  jevois-cmd  jevois-create-module  jevois-create-module.sh  jevois-create-python-module  jevois-jvpkg  jevois-jvpkg.pl  jevois-modinfo  jevois-modinfo.pl  jevois-usbsd  jevoisdoc-grid.pl  jevoispro-npu-convert.sh  list-sources.sh  publish-all-doc.sh  round-image-corners.sh
share/: README.txt
share-jevois/: README.txt
share-jevoispro/: README.txt
share-jevoispro/templates/: CMakeLists.txt  Module.C
share/templates/: PyModule.py
src/: jevois_config.cmake.in  pyjevois.py.in
src/Apps/: jevois-add-videomapping.C  jevois-camtest.C  jevois-daemon.C  jevois-module-param.C  jevois-restore-console.C
src/jevois/Component/: Component.C  Manager.C  ParameterDef.C  ParameterRegistry.C
src/jevois/Core/: Camera.C  CameraCalibration.C  CameraDevice.C  CameraSensor.C  Engine.C  Gadget.C  ICM20948.C  ICM20948_dmp3a.H  IMU.C  IMUdata.C  IMUi2c.C  IMUspi.C  InputFrame.C  Module.C  MovieInput.C  MovieOutput.C  OutputFrame.C  PythonModule.C  PythonOpenCV.C  PythonParameter.C  PythonSupport.C  PythonWrapper.C  Serial.C  StdioInterface.C  UserInterface.C  VideoBuf.C  VideoBuffers.C  VideoDisplay.C  VideoDisplayGL.C  VideoDisplayGUI.C  VideoInput.C  VideoMapping.C  VideoOutput.C  VideoOutputNone.C
src/jevois/DNN/: CLIP.C  Network.C  NetworkHailo.C  NetworkNPU.C  NetworkONNX.C  NetworkOpenCV.C  (+19 more)
(+155 files in other folders)
